<?xml version="1.0" encoding="utf-8"?>

<resources>

	<string name="app_name">Foosball</string>

	<string name="button_new_match">New match</string>
	<string name="button_statistics">Statistics</string>
	<string name="button_rematch">Rematch</string>
	<string name="button_exit">Exit</string>

	<string name="dialog_button_no">No</string>
	<string name="dialog_button_yes">Yes</string>
	<string name="dialog_message_exit">Do you really want to exit?</string>
	<string name="dialog_message_delete">Do you really want to delete this item?\nThis action cannot be undone.</string>

	<string name="hint_player1">Player 1</string>
	<string name="hint_player2">Player 2</string>
	<string name="hint_player3">Player 3</string>
	<string name="hint_player4">Player 4</string>

	<string name="label_score_to_win">Score to win</string>

	<string name="menu_back">Back</string>
	<string name="menu_cancel">Cancel</string>
	<string name="menu_manage_players">Manage players</string>
	<string name="menu_start">Start</string>
	<string name="menu_undo">Undo</string>

	<string name="radio_player_positions_current">Current</string>
	<string name="radio_player_positions_balance">Balance</string>
	<string name="radio_player_positions_random">Random</string>

	<string name="table_header_player">PLAYER</string>
	<string name="table_header_games_played">GP</string>
	<string name="table_header_wins">W</string>
	<string name="table_header_losses">L</string>
	<string name="table_header_goals_for">GF</string>
	<string name="table_header_goals_against">GA</string>
	<string name="table_header_rating">RATING</string>
	<string name="table_header_name">NAME</string>

	<string name="text_player_name_anonymous">Anonymous</string>
	<string name="text_home_team">Home team</string>
	<string name="text_away_team">Away team</string>
	<string name="text_match_options">Match options</string>
	<string name="text_match_ranked">Ranked</string>
	<string name="text_player_options">Player options</string>
	<string name="text_player_positions">Positions</string>
	<string name="text_home">HOME</string>
	<string name="text_away">AWAY</string>
	<string name="text_team_won">%s won!</string>
	<string name="text_no_items_found">No items found.</string>

	<string name="title_main">Foosball</string>
	<string name="title_new_match">New match</string>
	<string name="title_match">Match</string>
	<string name="title_match_summary">Match summary</string>
	<string name="title_statistics">Statistics</string>
	<string name="title_manage_players">Manage players</string>

	<string name="toast_player_deleted">Player deleted.</string>

	<string name="widget_rating_name">Foosball</string>

</resources>
