<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="16dp">

	<TextView android:id="@+id/title_main"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginBottom="16dp"
			android:textSize="48dp"
			android:text="@string/title_main" />

	<Button android:id="@+id/button_new_match"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:padding="12dp"
			android:textSize="24sp"
			android:text="@string/button_new_match"
			android:onClick="startNewMatch" />

	<Button android:id="@+id/button_statistics"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:padding="12dp"
			android:textSize="24sp"
			android:text="@string/button_statistics"
			android:onClick="openStatistics" />

</LinearLayout>