<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/layout"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:layout_margin="8dp">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:background="@android:color/background_dark"
				  android:alpha="0.5"/>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:orientation="vertical">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_marginTop="4dp"
					  android:layout_marginRight="8dp"
					  android:layout_marginBottom="4dp"
					  android:layout_marginLeft="8dp"
					  android:gravity="center_vertical"
					  android:orientation="horizontal">

			<ImageView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="15"
					android:contentDescription="Icon"
					android:src="@drawable/ic_launcher"/>

			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="85"
					android:layout_marginLeft="8dp"
					android:textColor="@android:color/white"
					android:textSize="24sp"
					android:text="@string/app_name"/>

		</LinearLayout>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					  android:orientation="horizontal"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:paddingTop="4dp"
					  android:paddingRight="8dp"
					  android:paddingBottom="4dp"
					  android:paddingLeft="8dp">

			<TextView
					android:id="@+id/heading_name"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:padding="8dp"
					android:textStyle="bold"
					android:text="@string/table_header_player"/>

			<TextView
					android:id="@+id/heading_rating"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:gravity="center"
					android:padding="8dp"
					android:textStyle="bold"
					android:text="@string/table_header_rating"/>

		</LinearLayout>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					  android:orientation="horizontal"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:paddingTop="4dp"
					  android:paddingRight="8dp"
					  android:paddingBottom="4dp"
					  android:paddingLeft="8dp">

			<TextView
					android:id="@+id/column_name"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:padding="8dp"/>

			<TextView
					android:id="@+id/column_rating"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:gravity="center"
					android:padding="8dp"/>

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>